--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@
 
 @media only screen and (max-width: 768.98px) {
     :root {
-        overflow-y: scroll;
+        overflow: auto;
     }
 }
 
